# pixi_python_package_template

./: .gitignore  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml  pytest.yml
docs/: api.md  cli.md  cli.rst  conf.py  index.md  index.rst  markdown.md  mkdocs.md  module.rst  test_cov.rst  usage.rst
docs/scripts/: macros.py  push_docs.sh  update_docs_by_hand.ps1  update_docs_by_hand.sh
project/: calculations.py
